sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/SBQQ__QuoteLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000000}</displayFormat>
        <label>Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>