sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Active_Commission__c.field-meta.xml
<CustomField>
    <fullName>Active_Commission__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Active Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>