sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Additional_Info_about_the_DPEI__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_about_the_DPEI__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>Additional Info about the DPEI</label>
    <type>TextArea</type>
</CustomField>