sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Advertisement_Quote_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Quote_Line_Count__c</fullName>
    <description>LEM - 2014: Used for &apos;Check for Templatized Contract Generation Path&apos; Product Validation Rule</description>
    <formula>IF( CONTAINS(SBQQ__ProductFamily__c, &apos;Advertisement&apos;)


			&amp;&amp;  ISBLANK(SBQQ__UpgradedSubscription__c),


				1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertisement Quote Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>