sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Allow_Rewards_to_Expire_after_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Allow_Rewards_to_Expire_after_60_Days__c</fullName>
    <description>LEM-13634 - Store Rewards Quote Line Attributes</description>
    <label>Allow Rewards to Expire after 60 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>