sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BD_Product__c.field-meta.xml
<CustomField>
    <fullName>BD_Product__c</fullName>
    <description>Created as part of LEM-10075</description>
    <label>BD Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Food Ordering (GFO)</fullName>
            </value>
            <value>
                <fullName>Bbot</fullName>
            </value>
            <value>
                <fullName>Brand Licensing</fullName>
            </value>
            <value>
                <fullName>B2B Drive</fullName>
            </value>
            <value>
                <fullName>Dashmart as a Service</fullName>
            </value>
            <value>
                <fullName>Snap/EBT</fullName>
            </value>
            <value>
                <fullName>PU Inflation Removal</fullName>
            </value>
            <value>
                <fullName>Catapult</fullName>
            </value>
            <value>
                <fullName>Platform Renegotiations</fullName>
            </value>
            <value>
                <fullName>Grocery Drive DSD</fullName>
            </value>
            <value>
                <fullName>Other (Marketplace)</fullName>
            </value>
            <value>
                <fullName>Other (Drive)</fullName>
            </value>
            <value>
                <fullName>Other / Business Right Sizing</fullName>
            </value>
            <value>
                <fullName>Victory: Mx Retained</fullName>
            </value>
            <value>
                <fullName>Victory: Contractual Drive Defense Term</fullName>
            </value>
            <value>
                <fullName>Digital Ordering Total</fullName>
            </value>
            <value>
                <fullName>A&amp;P Commitment &gt;1%</fullName>
            </value>
            <value>
                <fullName>GVP Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>