sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BI_Max_Redemption_Cap__c.field-meta.xml
<CustomField>
    <fullName>BI_Max_Redemption_Cap__c</fullName>
    <description>LEM-9346: Fixing the Process for In-Campaign Changes (background field)</description>
    <formula>IF(Brief_Item__r.Max_Redemption_Cap__c = NULL, NULL, TEXT(Brief_Item__r.Max_Redemption_Cap__c))</formula>
    <label>BI Max Redemption Cap</label>
    <type>Text</type>
</CustomField>