sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <description>LEM-486 – Attributes related to Advertisement products</description>
    <label>Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>