sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Brands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>