sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>