sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Budget_Period__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Budget Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget_Period</valueSetName>
    </valueSet>
</CustomField>