sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CancelReplace__c.field-meta.xml
<CustomField>
    <fullName>CancelReplace__c</fullName>
    <formula>OR(AND(SBQQ__UpgradedSubscription__c != NULL,  SBQQ__Source__c = NULL),AND(SBQQ__Quantity__c = 0, SBQQ__Source__c != NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancelReplace</label>
    <type>Checkbox</type>
</CustomField>