sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ceiling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Rate__c</fullName>
    <description>LEM-13812 : It is used to capture the Maximum Commission value from CRT record.</description>
    <label>Maximum Commission</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>