sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Commission_Discount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Discount__c</fullName>
    <description>LEM-180 – Initial Setup of Quote Line – Quote Line Pricing</description>
    <formula>IF(Requested_Commission__c &gt; 0, Original_Commission__c - Requested_Commission__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>