sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Commission_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13822:Used to hold the value of matched Commission Rate </description>
    <inlineHelpText>The commission rate record used to set the target, ceiling, and floor commission rates for this line</inlineHelpText>
    <label>Commission Rate Number</label>
    <referenceTo>Commission_Rate__c</referenceTo>
    <relationshipLabel>Quote Lines (Commission Rate Number)</relationshipLabel>
    <relationshipName>Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>