sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Corp_Drive_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_Drive_Business_ID__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Corp Drive Business ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>