sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Corp_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Corp_Subsidy_Amount__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Corp Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>