sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Create_Brief_Item__c.field-meta.xml
<CustomField>
    <fullName>Create_Brief_Item__c</fullName>
    <description>LEM-12673: Clean up Brief/Brief Item Metadata</description>
    <label>Create Brief Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>