sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Create_Brief_Item_On_UI__c.field-meta.xml
<CustomField>
    <fullName>Create_Brief_Item_On_UI__c</fullName>
    <description>LEM-15129: It is used to indicate if related Brief Item can be created or not for the Quote Line.</description>
    <formula>IF(
  AND(
    TEXT(SBQQ__Quote__r.Account_Segment__c) = $Label.AccountSegmentSMB,
    Split_Category__c = $Label.SplitCategoryAandP
  ),
  $Label.Value_No,
  TEXT(Create_Brief_Item__c)
)</formula>
    <label>Create Brief Item</label>
    <type>Text</type>
</CustomField>