sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CRM_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Type__c</fullName>
    <description>LEM-13964: It indicates the CRM type and the value is defaulted to &apos;Rx CRM&apos;.</description>
    <label>CRM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rx CRM</fullName>
                <default>true</default>
                <label>Rx CRM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>