sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Dayparting__c.field-meta.xml
<CustomField>
    <fullName>Dayparting__c</fullName>
    <description>LEM-13960: Magic Wand Attributes</description>
    <label>Dayparting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>