sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Deal_Desk_Commission_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Commission_Threshold__c</fullName>
    <description>LEM-13812 : Field added for mapping from CRT values used in calculation of fees/commission, and for use in product, price and approval rules.</description>
    <label>Deal Desk Commission Threshold</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>