sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Deck_Rank_Floor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank_Floor_Rate__c</fullName>
    <description>LEM-15777: Twin field for magic wand attribute.</description>
    <formula>CASE(Merchant_Deck_Rank__c, $Label.DeckRankAce, Commission_Rate_Number__r.Ace_Floor__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deck Rank Floor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>