sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Deck_Rank_Rate__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank_Rate__c</fullName>
    <description>LEM-13812 : Field added for stamping Orginal Commission using Price Rule</description>
    <formula>IF( CONTAINS( Package__c ,&apos;Basic&apos;) , CASE( Merchant_Deck_Rank__c ,&apos;Ace&apos;,  Commission_Rate_Number__r.Ace_Basic__c ,0) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Deck Rank Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>