sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Fee__c.field-meta.xml
<CustomField>
    <fullName>Default_Fee__c</fullName>
    <description>LEM-13822 : The fee calculated by CRT. stored as a default in case QCP logic requires zeroing out the original values.</description>
    <label>Default Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>