sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delay_after_Activation_days__c.field-meta.xml
<CustomField>
    <fullName>Delay_after_Activation_days__c</fullName>
    <description>LEM-13626: This field is added as a drawer attribute to capture the user input about Delay after Activation (days).</description>
    <label>Delay after Activation (days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>