sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Radius_meters__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Radius_meters__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Delivery Radius (meters)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>