sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DeliveryPickupCommissionFee__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPickupCommissionFee__c</fullName>
    <description>This is a backend field that will be populated via price rules which will be further used to throw validation on Storefront product.</description>
    <label>Delivery Pickup Commission Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>