sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Dependent_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13812 : Field added for mapping from CRT values used in calculation of fees/commission, and for use in product, price and approval rules.</description>
    <label>Dependent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Lines (Dependent Product)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>