sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Dining_Spend_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Dining_Spend_Minimum__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Dining Spend Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>