sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discounted_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Commission_Rate__c</fullName>
    <description>LEM-13960: It is used to store discounted commission rate and is used as a magic wand attribute.</description>
    <formula>IF(
  NOT(ISBLANK(TEXT(SBQQ__Quote__r.Custom_Partnership_Type__c))),
  Requested_Commission__c,
  NULL
)</formula>
    <label>Discounted Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>