sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Does_Mx_want_Social_Media_Mentions_by_DD__c.field-meta.xml
<CustomField>
    <fullName>Does_Mx_want_Social_Media_Mentions_by_DD__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>Does Mx want Social Media Mentions by DD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>