sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DPEI_Mentions_on_Mx_Owned_Channels_by_Mx__c.field-meta.xml
<CustomField>
    <fullName>DPEI_Mentions_on_Mx_Owned_Channels_by_Mx__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>DPEI Mentions on Mx-Owned Channels by Mx</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channels</valueSetName>
    </valueSet>
</CustomField>