sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Enable_Catering_Setup__c.field-meta.xml
<CustomField>
    <fullName>Enable_Catering_Setup__c</fullName>
    <description>LEM-3107: Capture whether Mx wants to enable catering setup</description>
    <label>Enable Catering Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>