sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Family_Auto_Activation__c.field-meta.xml
<CustomField>
    <fullName>Family_Auto_Activation__c</fullName>
    <formula>SBQQ__ProductOption__r.Family__c

&amp; &apos;: &apos; &amp; TEXT(Supports_Drive_Auto_Activation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family/Auto Activation</label>
    <type>Text</type>
</CustomField>