sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Family_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Family_Payment_Method__c</fullName>
    <formula>SBQQ__ProductOption__r.Family__c

&amp; &apos;: &apos; &amp;  TEXT(Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family/Payment Method</label>
    <type>Text</type>
</CustomField>